# zerv

./: .gitignore  .mise.security.toml  .mise.toml  .mise.toml.bak  .pre-commit-config.yaml  .releaserc.js  .releaserc.json  CLAUDE.md  Cargo.toml  Makefile  README.md  bakefile.py  clippy.toml  pyproject.toml  rustfmt.toml  sonar-project.properties  test-unlock-logic.sh  test_simple_function.rs
.amazonq/rules/: cli-implementation.md  dev-workflow.md  docker-git-testing.md  interaction-mode.md  source-code-lookup.md  testing-standards.md
.cargo/: audit.toml  config.toml
.claude/: BEST_PRACTICES.md  CLAUDE.md
.claude/commands/: audit-all.md  audit.md  update-docs.md
.claude/commands/audit/: audit.sh  quick.sh  summary.sh
.claude/plan/: 00-README.md  00-architecture-insights.md  00-cli-design.md  01-cargo-binstall-support.md  01-fix-annotated-tag-bug.md  01-implement-render-and-source-improvements.md  01-lock-artifact-aggregation.md  01-python-api-steps.md  01-python-api.md  02-integration-test-restructure.md  02-rewrite-get-latest-tag-for-annotated-tags.md  03-check-command-spec.md  06-error-handling-improvements.md  07-docker-test-optimization.md  10-version-command-complete-spec.md  13-schema-based-bump-plan.md  16-reset-logic-schema-component-issue.md  19-string-sanitization-utils.md  20-component-resolution-centralization.md  21-handlebars-cli-integration-plan.md  24-semver-to-zerv-cleanup-plan.md  25-handlebars-cli-integration-updated-plan.md  27-integration-tests-revamp-plan.md  28-gitrepofixture-optimization.md  29-integration-test-consistency-improvements.md  30-schema-error-context-improvements.md  30-test-coverage-improvement-plan.md  31-comprehensive-cli-manual-with-llm-integration.md  32-zerv-flow-implementation-plan.md  33-zerv-flow-cli-command-design.md  34-zerv-flow-implementation-steps.md  35-handlebars-to-tera-migration-plan.md  36-template-types-cleanup-plan.md  37-pattern-assertion-cleanup.md  38-implement-flexible-schema-system.md  39-implement-zerv-flow-schema-system.md  40-test-refactoring-builder-pattern.md  41-vcs-specific-prefix-implementation-plan.md  42-zerv-flow-gitflow-implementation-plan.md  43-fix-git-tag-resolution-bug.md  (+9 more)
.claude/ref/: README.md  documentation-maintenance.md
.cursor/rules/: cli-implementation.mdc  dev-workflow.mdc  docker-git-testing.mdc  source-code-lookup.mdc  testing-standards.mdc
.dev/: 00-README.md  00-archived-insights.md  00-current-state.md  00-implementation-plan.md  00-key-files.md  00-new-cli-design.md  00-roadmap.md  01-schema-system-implementation.md  01-vcs-design.md  02-current-state.md  02-docker-git-testing-bug.md  02-error-handling-audit.md  02-vcs-implementation.md  03-check-command-spec.md  03-phase2-implementation-plan.md  04-docker-everywhere-architecture.md  04-multi-platform-ci-status.md  05-docker-test-strategy.md  05-version-command-complete-spec.md  06-centralized-config-implementation.md  07-docker-test-optimization.md  09-version-command-implementation-plan.md  10-version-command-complete-spec.md  11-version-command-ideal-spec.md  12-version-command-implementation-plan.md  13-pipeline-redundancy-elimination-plan.md  13-schema-refactoring-plan.md  14-semantic-versioning-bump-behavior-analysis.md  15-implementation-todo-plan.md  16-precedence-optimization-plan.md  16-zerv-fixture-improvement-plan.md  17-schema-based-bump-implementation-plan.md  18-args-refactoring-plan.md  18-component-varfield-enum-refactoring.md  19-handlebars-cli-integration-plan.md  22-update-from-zerv-to-use-centralized-resolution.md  23-schema-first-zerv-conversion.md  25-handlebars-cli-integration-updated-plan.md  26-zerv-cli-comprehensive-documentation.md  27-integration-tests-revamp-plan.md  (+11 more)
.github/workflows/: build-bin.yml  cd.yml  ci-pre-commit.yml  ci-test-2.yaml  ci-test.yml  ci.yml  pr-unlock.yml  pre-commit.yml  publish-crates.yml  publish-pypi.yml  security.yml  semantic-pull-request.yaml  shared-aggregate-lock-results.yml  shared-build-bin.yml  shared-check-pr-label-and-branch.yml  shared-check-pr-labels-with-prefix.yml  shared-create-tags.yml  shared-lock.yml  shared-matrix-lock.yml  shared-pr-unlock.yml  shared-semantic-release.yml  shared-unlock.yml  shared-zerv-versioning.yml  tag-test.yml  test-lock-aggregation.yml  test-pr-unlock.yml  test-shared-deploy-dummy-service-with-lock.yml  test-shared-deploy-dummy-service.yml  test-shared-deploy-with-lock.yml  test-shared-global-lock.yml  test-shared-job.yml  test-shared-lock-aggregation.yml  test-shared-pr-unlock.yml  test-shared-service-lock.yml  test.yml  trivy.yml  versioning.yml  warm-mise-cache.yml
.kiro/steering/: cli-implementation.md  dev-workflow.md  docker-git-testing.md  interaction-mode.md  testing-standards.md
assets/images/: git-diagram-complex-release-branch.mmd  git-diagram-gitflow-development-flow.mmd  git-diagram-trunk-based-development.mmd
docs/: .last-update  AUTO.md  CLI.md  llms.md
python/zerv/: __init__.py  __main__.py  _find_zerv.py
scripts/: extract_mermaid_from_markers.sh  install.sh
src/: config.rs  constants.rs  error.rs  lib.rs  logging.rs  main.rs
src/cli/: app.rs  check.rs  llm_help.rs  mod.rs  parser.rs  version.rs
src/pipeline/: mod.rs  parse_version_from_tag.rs  vcs_data_to_zerv_vars.rs
src/schema/: components.rs  flexible.rs  mod.rs  names.rs  parser.rs  presets.rs
src/test_utils/: bump_type.rs  dir.rs  git.rs  logging.rs  mod.rs  output.rs  pattern_assertions.rs  types.rs  vcs_fixtures.rs  version.rs  version_args.rs
src/utils/: bool_resolution.rs  constants.rs  mod.rs  sanitize.rs
src/vcs/: git.rs  git_test.rs  git_utils.rs  mod.rs  vcs_data.rs
src/version/: core.rs  mod.rs  ordering.rs  version_object.rs
tests/: integration.rs  integration_test.rs
tests/integration_tests/: cli_help.rs  help_flags.rs  logging.rs  mod.rs
tests/python/: conftest.py  test_check.py  test_extend_args.py  test_find_zerv.py  test_flow.py  test_main.py  test_render.py  test_stdin.py  test_version.py  utils.py
tests/util/: command.rs  dir.rs  git.rs  mod.rs  output.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+234 files in other folders)
