[package]
name = "zerv"
version = "0.0.0" # Use git tag
authors = ["Wisaroot Lertthaweedech <wislertth@gmail.com>"]
edition = "2024"
description = """
Generate versions for any commit from git and other version control -
perfect for CI/CD builds and multiple formats
"""
license = "Apache-2.0"
repository = "https://github.com/wislertt/zerv"
homepage = "https://github.com/wislertt/zerv"
readme = "README.md"
keywords = ["cli", "versioning", "git", "semver"]
categories = ["command-line-utilities", "development-tools::build-utils", "config", "parsing"]
rust-version = "1.89"
exclude = [
  "/.github/",
  "/scripts/",
  "/.dev/",
  "/.amazonq/",
  "/.cursor/",
]

[features]
test-utils = ["tempfile"]

[[bin]]
name = "zerv"
path = "src/main.rs"

[dependencies]
chrono = "^0.4.41"
clap = { version = "^4.5", features = ["derive"] }
indexmap = { version = "^2.12", features = ["serde"] }
libc = "^0.2"
once_cell = "^1.19"
regex = "^1.11"
ron = "^0.11.0"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
strum = { version = "^0.27", features = ["derive"] }
tera = "^1.20"
tempfile = { version = "^3.0", optional = true }
tracing = "^0.1"
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }

[dev-dependencies]
ctor = "^0.6"
dotenvy = "^0.15"
rstest = "^0.26.0"
serial_test = "^3.0"
shlex = "^1.3"
tempfile = "^3.0"
zerv = { path = ".", features = ["test-utils"] }
