[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "zerv-version"
version = "0.0.0" # Use git tag
description = "Dynamic versioning CLI tool"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
keywords = ["versioning", "git", "semver", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Version Control",
]

[project.optional-dependencies]
dev = ["pytest", "mypy"]

[tool.maturin]
bindings = "pyo3"
features = ["python"]
